<resources>
    <string name="app_name">Quem Quer Ser Milionario</string>

    <string name="txt_MainActivity">Quem Quer Ser Milionário?</string>
    <string name="action_settings">Settings</string>
    <string name="btn_MainActivity">Novo Jogo</string>
    <string name="title_activity_game">Quem Quer Ser Milionário?</string>


    <string name="txt_GameActivity_question_string">Large Text</string>
    <string name="btn_GameActivity_question_A">New Button</string>
    <string name="btn_GameActivity_question_B">New Button</string>
    <string name="btn_GameActivity_question_C">New Button</string>
    <string name="btn_GameActivity_question_D">New Button</string>
    <string name="btn_GameActivity_Ajuda50">50/50</string>
    <string name="btn_GameActivity_AjudaPublico">Ajuda Publico</string>
    <string name="btn_GameActivity_AjudaTelf">Ajuda Telefone</string>
</resources>
