<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="android.flag.joaojesus.quemquersermilionario.GameActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_GameActivity_question_string"
        android:id="@+id/textView_GameActivity"
        android:layout_marginTop="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_GameActivity_question_A"
        android:id="@+id/button_QuestionA_GameActivity"
        android:layout_below="@+id/textView_GameActivity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_GameActivity_question_B"
        android:id="@+id/button_QuestionB_GameActivity"
        android:layout_below="@+id/button_QuestionA_GameActivity"
        android:layout_alignLeft="@+id/button_QuestionA_GameActivity"
        android:layout_alignStart="@+id/button_QuestionA_GameActivity" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_GameActivity_question_C"
        android:id="@+id/button_QuestionC_GameActivity"
        android:layout_below="@+id/button_QuestionB_GameActivity"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_GameActivity_question_D"
        android:id="@+id/button_QuestionD_GameActivity"
        android:layout_below="@+id/button_QuestionC_GameActivity"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_GameActivity_Ajuda50"
        android:id="@+id/button_Ajuda50_GameActivity"
        android:layout_below="@+id/button_QuestionD_GameActivity"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="57dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_GameActivity_AjudaPublico"
        android:id="@+id/button_AjudaPublico_GameActivity"
        android:layout_alignTop="@+id/button_Ajuda50_GameActivity"
        android:layout_alignRight="@+id/textView_GameActivity"
        android:layout_alignEnd="@+id/textView_GameActivity" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_GameActivity_AjudaTelf"
        android:id="@+id/button_AjudaTelefone_GameActivity"
        android:layout_alignTop="@+id/button_AjudaPublico_GameActivity"
        android:layout_toRightOf="@+id/button_AjudaPublico_GameActivity"
        android:layout_toEndOf="@+id/button_AjudaPublico_GameActivity" />
</RelativeLayout>
